--- a/docs/libError.pod
+++ b/docs/libError.pod
@@ -59,8 +59,8 @@ ESTOP=251;
 
 usage : 
 
-C<ls my_file
-erreur $? "mesage" $ECONT "COMMAND">
+ C<ls my_file>
+ C<erreur $? "mesage" $ECONT "COMMAND">
 
 erreur take the first arg, 
 
@@ -81,9 +81,8 @@ before stoping or continue it start COMMAND. COMMAND is optionnal
 
 =head4 case1 : no error
 
-C<ls my_file>
-
-C<erreur $? "presence fichier my_file" $ECONT "ls .">
+ C<ls my_file>
+ C<erreur $? "presence fichier my_file" $ECONT "ls .">
 
 ls returns 0, so erreur return a message : B<myhostname - 0211 17:21 - myprogram(myfunction):  presence fichier my_file  OK>
 
@@ -91,8 +90,8 @@ ls returns 0, so erreur return a message : B<myhostname - 0211 17:21 - myprogram
 
 same exemple :
 
-C<ls my_file>
-C<erreur $? "presence fichier my_file" $ECONT "ls .">
+ C<ls my_file>
+ C<erreur $? "presence fichier my_file" $ECONT "ls .">
 
 ls return 2 : file not found. so erreur keep the return code of ls I mean 2. then execute the forth arg, in our exemple it's "ls .".finally return 2 with the message B<myhostname - 0211 17:28 - : myprogram(myfunction) presence fichier my_file  KO>
 
@@ -102,8 +101,8 @@ the same as explained before without execution of the forth argument because you
 
 =head4 case4 : stop on error with action
 
-C<ls my_file>
-C<erreur $? "presence fichier my_file" $ESTOP "ls .">
+ C<ls my_file>
+ C<erreur $? "presence fichier my_file" $ESTOP "ls .">
 
 as you can see I put $ESTOP instead of $ECONT witch mean please stop on error. The forth arg is executed before the program exit.
 
